# voidbox

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  wrangler.example.toml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  global.css
frontend/src/components/: AuthScreen.tsx  CustomSelect.tsx  EmailCard.tsx  EmailDetail.tsx  EmailList.tsx  FilterRow.tsx  InboxActive.tsx  InboxRegister.tsx  Logo.tsx  MainScreen.tsx  TTLBadge.tsx  Toast.tsx  Toolbar.tsx
frontend/src/lib/: api.ts  utils.ts
frontend/src/stores/: auth.ts  inbox.ts  toast.ts
migrations/: 0001_init.sql  0002_drop_forward_from.sql
setup/: email-setup.mjs  package.json
src/: auth.rs  entry.mjs  lib.rs  llms.txt  router.rs  types.rs
src/handlers/: config.rs  inbox.rs  mail.rs  mod.rs
src/html/: index.html
src/repo/: inbox.rs  mail.rs  mod.rs
src/service/: inbox.rs  mail.rs  mod.rs
