[package]
name = "voidbox"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.7", features = ["d1"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
mail-parser = "0.9"
email_address = "0.2"
nanoid = "0.4"
js-sys = "0.3"
urlencoding = "2"

[dependencies.getrandom]
version = "0.2"
features = ["js"]
